...
    <string name="rename_hint">Enter new name</string>
    <string name="error_name_too_long">Name cannot be longer than %d characters</string>

    <!-- For the AppNamesActivity screen -->
    <string name="custom_app_names_subtitle">Edit or remove your custom app names here.</string>
    <string name="rename_dialog_title">Rename \"%s\"</string>
    <string name="save">Save</string>

    <string name="error_loading_hidden_apps">Error loading hidden apps.</string>
    <string name="error_saving_hidden_apps">Error saving hidden apps.</string>
    <!-- Generic string for clock, calendar etc. -->

    <string name="error_activity_not_found">Could not find an app to open this.</string>
...
